manifests/cloud/glance/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  labels:
    app: glance
  namespace: cloud
spec:
  selector:
    app: glance
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
